[package]
name = "turtle-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
turtle-protocol = { git = "ssh://git@gitlab.com/level9turtles/turtle_chat/turtle-protocol.git", version = "0.1.6" }
#turtle-protocol = { path = "../turtle-protocol" }
wasm-bindgen = "0.2.90"

[dependencies.web-sys]
version = "0.3.67"
features = [
    "ErrorEvent",
    "WebSocket"
]


[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false


[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false
